@@ -37,7 +37,6 @@
 	int length = 0;
 	int start = offset;
 	unichar c;
-	//  NSData *data;
 	while (YES) 
     {
 		offset++;
