@@ -17,6 +17,7 @@
 - (LCQuery *) rewrite: (LCIndexReader *) reader
 {
 	LCBooleanQuery *query = [[LCBooleanQuery alloc] initWithCoordination: YES];
+	CREATE_AUTORELEASE_POOL(pool);
 	LCTermEnumerator *enumerator = [reader termEnumeratorWithTerm: prefix];
 	NSString *prefixText = [prefix text];
 	NSString *prefixField = [prefix field];
@@ -29,11 +30,13 @@
 			LCTermQuery *tq = [[LCTermQuery alloc] initWithTerm: term]; // found a match
 			[tq setBoost: [self boost]]; // set the boost
 			[query addQuery: tq occur: LCOccur_SHOULD]; // add to quer
+			DESTROY(tq);
 		} else {
 			break;
 		}
 	} while ([enumerator hasNextTerm]);
 	[enumerator close];
+	DESTROY(pool);
 	return AUTORELEASE(query);
 }
 
